--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,14 +1,8 @@
-<!doctype html>
-<title>{% block title %}photodude{% endblock %}</title>
+{% extends 'base.html' %}
 
-<h1>{{ self.title() }}</h1>
+{% block main %}
+<p><a href="{{ url_for('view_photos') }}">photos</a></p>
+<p><a href="#">labels</a></p>
+{% endblock main %}
 
-<span>photos in {{ config.PHOTO_DIR }}</span>
-
-<ul>
-  {% for photo in photos %}
-  <li>{{ photo.filename }}</li>
-  {% else %}
-  <li>(no photos)</li>
-  {% endfor %}
-</ul>
+{% block back_to_index %}{% endblock %}
