Set up ui dev (backbone) workflow.

--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -5,5 +5,5 @@ photos
 {% endblock main %}
 
 {% block script_tags %}
-<script src="{{ url_for('static', filename='test.js') }}"></script>
+<script src="{{ url_for('static', filename='photos_app.js') }}"></script>
 {% endblock script_tags %}
