Basic photo list impl.

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -10,7 +10,7 @@
 {% block main %}{% endblock %}
 </div>
 
-<div class=back_to_index>
+<div class=backToIndex>
 {% block back_to_index %}
 <a href="{{ url_for('view_index') }}">back to home</a>
 {% endblock back_to_index %}
