--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
-{% block main %}
+{% block body %}
+
+<h1>{{ self.title() }}</h1>
+
 <p><a href="{{ url_for('view_photos') }}">photos</a></p>
 <p><a href="#">labels</a></p>
-{% endblock main %}
 
-{% block back_to_index %}{% endblock %}
+{% endblock body %}
