--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <head>
 <title>{% block title %}photodude{% endblock %}</title>
+
+{% block style %}
+<style type="text/css">
+body {
+  margin: 0;
+}
+</style>
+{% endblock style %}
+
 </head>
 
 <body>
