--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -5,7 +5,8 @@
 {% block style %}
 <style type="text/css">
 body {
-  margin: 0;
+  margin: 0 auto;
+  width: 80%;
 }
 </style>
 {% endblock style %}
