Initial work on labels page.

--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -42,7 +42,7 @@
 
 {% block left_column %}
 <h1>{{ self.title() }}</h1>
-<p><a href="{{ url_for('view_index') }}">&lt;&lt; back</a></p>
+<p><a href="{{ url_for('view_labels') }}">&lt;&lt; labels</a></p>
 
 <ul id=photoList></ul>
 {% endblock left_column %}
