--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -5,6 +5,6 @@
 <h1>{{ self.title() }}</h1>
 
 <p><a href="{{ url_for('view_photos') }}">photos</a></p>
-<p><a href="#">labels</a></p>
+<p><a href="{{ url_for('view_labels') }}">labels</a></p>
 
 {% endblock body %}
