--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -7,42 +7,6 @@
 {% block style %}
 {{ super() }}
 <style type="text/css">
-.modal {
-  width: 140px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -60px;
-  margin-left: -70px;
-  padding: 1rem;
-  background: rgba(255, 255, 255, .95);
-  border: 1px solid lightgrey;
-  border-radius: .25rem;
-}
-
-.hidden {
-  display: none;
-}
-
-#photoList {
-  list-style-type: none;
-  padding: 0;
-}
-
-.photoListItem:not(:first-child) {
-  margin-top: .25rem;
-}
-.photoListItem:hover {
-  background: powderblue;
-}
-.photoListItem.selected {
-  color: blue;
-  background: lightblue;
-}
-.photoListItem.selected::before {
-  content: "> ";
-}
-
 .thumbnail {
   height: 60px;
 }
@@ -79,9 +43,9 @@
 
 {% block left_column %}
 <h1>{{ self.title() }}</h1>
-<p><a href="{{ url_for('view_labels') }}">&lt;&lt; labels</a></p>
+<p><a id=linkToLabelsPage href="{{ url_for('view_labels') }}">&lt;&lt; labels</a></p>
 
-<ul id=photoList></ul>
+<ul class=list></ul>
 {% endblock left_column %}
 
 {% block right_column %}
