--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -66,8 +66,10 @@
     </div>
 
     <div id=labelsContainer>
-      <p><span id=labels></span></p>
-      <button id=addLabelButton>add</button>
+      <p>
+        <span id=labels></span>
+        <button id=addLabelButton>&gt; add</button>
+      </p>
     </div>
 
   </div>
