Small usability improvements.

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -36,12 +36,15 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -60px;
+  margin-top: -160px;
   margin-left: -70px;
   padding: 1rem;
   background: rgba(255, 255, 255, .95);
   border: 1px solid lightgrey;
   border-radius: .25rem;
+}
+.modal select {
+  max-height: 300px;
 }
 
 .hidden {
