Replace href=# links since they conflict with routing.
Use javascript:void(0) instead.

--- a/server/templates/labels.html
+++ b/server/templates/labels.html
@@ -39,7 +39,7 @@
 <div id=createLabelModal class="modal hidden">
   <p>&gt; create label</p>
   <p><input id=labelInput type=text/></p>
-  <p><a id=closeCreateLabelModal href=#>&lt;&lt; close</a></p>
+  <p><a id=closeCreateLabelModal href=javascript:void(0)>&lt;&lt; close</a></p>
 </div>
 {% endblock left_column %}
 
