--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -78,13 +78,13 @@
 <div id=addLabelModal class="modal hidden">
   <p>&gt; add label</p>
   <p><select id=labelPicker></select></p>
-  <p><a id=closeAddLabelModal href=#>&lt;&lt; close</a></p>
+  <p><a id=closeAddLabelModal href=javascript:void(0)>&lt;&lt; close</a></p>
 </div>
 
 <div id=removeLabelModal class="modal hidden">
   <p>&gt; remove label</p>
-  <p><a id=confirmLabelRemove href=#>&gt; remove [<span id=labelToRemove></span>]</a></p>
-  <p><a id=closeAddLabelModal href=#>&lt;&lt; close</a></p>
+  <p><a id=confirmLabelRemove href=javascript:void(0)>&gt; remove [<span id=labelToRemove></span>]</a></p>
+  <p><a id=closeAddLabelModal href=javascript:void(0)>&lt;&lt; close</a></p>
 </div>
 {% endblock right_column %}
 
