--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -13,7 +13,6 @@
 
 #currentPhotoContainer {
   height: 100%;
-  padding: 1rem;
 }
 
 .imageContainer {
@@ -65,7 +64,7 @@
       <span id=date></span>
     </div>
 
-    <div id=labelsContainer>
+    <div class=labelsContainer>
       <p>
         <span id=labels></span>
         <button id=addLabelButton>&gt; add</button>
