--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -3,18 +3,24 @@
 <title>{% block title %}photodude{% endblock %}</title>
 
 {% block style %}
+<link rel=stylesheet type=text/css href=http://meyerweb.com/eric/tools/css/reset/reset.css />
 <style type="text/css">
 * {
   box-sizing: border-box;
 }
-body {
-  margin: 0 auto;
-  width: 80%;
+
+h1 {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
+p:not(:first-child) {
+  margin-top: .5rem;
+}
+
+.pageLink,
 .list {
-  list-style-type: none;
-  padding: 0;
+  margin-top: .5rem;
 }
 
 .listItem:not(:first-child) {
